--- a/index.html
+++ b/index.html
@@ -1516,6 +1516,246 @@
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
+                <div class="card fes3-nico__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/063_fes3_nico.png" />
+                    <div class="signature fes3-nico__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/nico.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-nico__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-ai__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/064_fes3_ai.png" />
+                    <div class="signature fes3-ai__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ai.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-ai__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-lanzhu__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/065_fes3_lanzhu.png" />
+                    <div class="signature fes3-lanzhu__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/lanzhu.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-lanzhu__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-kotori__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/066_fes3_kotori.png" />
+                    <div class="signature fes3-kotori__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kotori.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-kotori__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-ruby__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/067_fes3_ruby.png" />
+                    <div class="signature fes3-ruby__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ruby.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-ruby__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-rina__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/068_fes3_rina.png" />
+                    <div class="signature fes3-rina__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/rina.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-rina__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-emma__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/069_fes3_emma.png" />
+                    <div class="signature fes3-emma__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/emma.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-emma__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-nozomi__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/070_fes3_nozomi.png" />
+                    <div class="signature fes3-nozomi__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/nozomi.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-nozomi__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-umi__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/071_fes3_umi.png" />
+                    <div class="signature fes3-umi__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/umi.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-umi__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-karin__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/072_fes3_karin.png" />
+                    <div class="signature fes3-karin__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/karin.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-karin__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section section__fes4">
