--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles.css">
     <title>FES Party UR Check</title>
 </head>
@@ -2046,12 +2046,12 @@
                 </div>
             </div>
         </div>
-        <div class="section section__fes4">
+        <!-- <div class="section section__fes4">
             <div class="sidebar sidebar__fes4">
                 4th<br>FES
             </div>
             <div class="background background__fes4"></div>
-        </div>
+        </div> -->
         <div class="section section__party1">
             <div class="sidebar sidebar__party1">
                 1st<br>Party
@@ -2707,12 +2707,12 @@
                 </div>
             </div>
         </div>
-        <div class="section section__party2">
+        <!-- <div class="section section__party2">
             <div class="sidebar sidebar__party2">
                 2nd<br>Party
             </div>
             <div class="background background__party2"></div>
-        </div>
+        </div> -->
         <div class="section section__event">
             <div class="sidebar sidebar__event">
                 Crazy<br>Event<br>UR
@@ -2817,5 +2817,6 @@
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
