Crazy Event UR -> Crazy Normal UR

--- a/index.html
+++ b/index.html
@@ -2713,104 +2713,104 @@
             </div>
             <div class="background background__party2"></div>
         </div> -->
-        <div class="section section__event">
-            <div class="sidebar sidebar__event">
-                Crazy<br>Event<br>UR
+        <div class="section section__normal">
+            <div class="sidebar sidebar__normal">
+                Crazy<br>Normal<br>UR
             </div>
-            <div class="background background__event">
-                <div class="card event-kotori__card">
-                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/event/001_event_kotori.png" />
-                    <div class="signature event-kotori__signature">
+            <div class="background background__normal">
+                <div class="card normal-kotori__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/001_normal_kotori.png" />
+                    <div class="signature normal-kotori__signature">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kotori.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak0">
+                    <div class="limitbreak normal-kotori__limitbreak0">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak1">
+                    <div class="limitbreak normal-kotori__limitbreak1">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak2">
+                    <div class="limitbreak normal-kotori__limitbreak2">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak3">
+                    <div class="limitbreak normal-kotori__limitbreak3">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak4">
+                    <div class="limitbreak normal-kotori__limitbreak4">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
                     </div>
-                    <div class="limitbreak event-kotori__limitbreak5">
+                    <div class="limitbreak normal-kotori__limitbreak5">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
-                <div class="card event-emma__card">
-                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/event/002_event_emma.png" />
-                    <div class="signature event-emma__signature">
+                <div class="card normal-emma__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/002_normal_emma.png" />
+                    <div class="signature normal-emma__signature">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/emma.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak0">
+                    <div class="limitbreak normal-emma__limitbreak0">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak1">
+                    <div class="limitbreak normal-emma__limitbreak1">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak2">
+                    <div class="limitbreak normal-emma__limitbreak2">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak3">
+                    <div class="limitbreak normal-emma__limitbreak3">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak4">
+                    <div class="limitbreak normal-emma__limitbreak4">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
                     </div>
-                    <div class="limitbreak event-emma__limitbreak5">
+                    <div class="limitbreak normal-emma__limitbreak5">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
-                <div class="card event-dia__card">
-                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/event/003_event_dia.png" />
-                    <div class="signature event-dia__signature">
+                <div class="card normal-dia__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/003_normal_dia.png" />
+                    <div class="signature normal-dia__signature">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/dia.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak0">
+                    <div class="limitbreak normal-dia__limitbreak0">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak1">
+                    <div class="limitbreak normal-dia__limitbreak1">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak2">
+                    <div class="limitbreak normal-dia__limitbreak2">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak3">
+                    <div class="limitbreak normal-dia__limitbreak3">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak4">
+                    <div class="limitbreak normal-dia__limitbreak4">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
                     </div>
-                    <div class="limitbreak event-dia__limitbreak5">
+                    <div class="limitbreak normal-dia__limitbreak5">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
-                <div class="card event-yoshiko__card">
-                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/event/004_event_yoshiko.png" />
-                    <div class="signature event-yoshiko__signature">
+                <div class="card normal-yoshiko__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/004_normal_yoshiko.png" />
+                    <div class="signature normal-yoshiko__signature">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/yoshiko.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak0">
+                    <div class="limitbreak normal-yoshiko__limitbreak0">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak0.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak1">
+                    <div class="limitbreak normal-yoshiko__limitbreak1">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak1.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak2">
+                    <div class="limitbreak normal-yoshiko__limitbreak2">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak2.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak3">
+                    <div class="limitbreak normal-yoshiko__limitbreak3">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak3.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak4">
+                    <div class="limitbreak normal-yoshiko__limitbreak4">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak4.png" />
                     </div>
-                    <div class="limitbreak event-yoshiko__limitbreak5">
+                    <div class="limitbreak normal-yoshiko__limitbreak5">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
