--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="checkerboard">
             <div class="section section__fes1">
                 <div class="sidebar sidebar__fes1">
-                    1st<br>FES
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/1st_fes.png" />
                 </div>
                 <div class="background background__fes1">
                     <div class="card fes-card fes1-maki__card">
@@ -691,7 +691,7 @@
             </div>
             <div class="section section__fes2">
                 <div class="sidebar sidebar__fes2">
-                    2nd<br>FES
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/2nd_fes.png" />
                 </div>
                 <div class="background background__fes2">
                     <div class="card fes-card fes2-eli__card">
@@ -1370,7 +1370,7 @@
             </div>
             <div class="section section__fes3">
                 <div class="sidebar sidebar__fes3">
-                    3rd<br>FES
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/3rd_fes.png" />
                 </div>
                 <div class="background background__fes3">
                     <div class="card fes-card fes3-mia__card">
@@ -2049,13 +2049,13 @@
             </div>
             <!-- <div class="section section__fes4">
                 <div class="sidebar sidebar__fes4">
-                    4th<br>FES
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/4th_fes.png" />
                 </div>
                 <div class="background background__fes4"></div>
             </div> -->
             <div class="section section__party1">
                 <div class="sidebar sidebar__party1">
-                    1st<br>Party
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/1st_party.png" />
                 </div>
                 <div class="background background__party1">
                     <div class="card party-card party1-ai__card">
@@ -2710,13 +2710,13 @@
             </div>
             <!-- <div class="section section__party2">
                 <div class="sidebar sidebar__party2">
-                    2nd<br>Party
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/2nd_party.png" />
                 </div>
                 <div class="background background__party2"></div>
             </div> -->
             <div class="section section__normal">
                 <div class="sidebar sidebar__normal">
-                    Crazy<br>Normal<br>UR
+                    <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/crazy_normal_ur.png" />
                 </div>
                 <div class="background background__normal">
                     <div class="card normal-card normal-kotori__card">
@@ -2818,7 +2818,7 @@
                 </div>
             </div>
         </div>
-        <button class="button" type="button" onclick="downImg()">save image</button>
+        <button class="button" type="button" onclick="downImg()">Save Image</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
