update button style

--- a/index.html
+++ b/index.html
@@ -2818,7 +2818,7 @@
                 </div>
             </div>
         </div>
-        <button class="button" type="button" onclick="downImg()">Save Image</button>
+        <button class="button" type="button" onclick="downImg()">Save<br>Image</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
