update app.js index.html styles.css

--- a/index.html
+++ b/index.html
@@ -2819,6 +2819,7 @@
             </div>
         </div>
         <button class="button" type="button" onclick="downImg()">Save<br>Image</button>
+        <button class="button" type="button" onclick="copyData()">Copy Data</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
