--- a/index.html
+++ b/index.html
@@ -2818,8 +2818,28 @@
                 </div>
             </div>
         </div>
-        <button class="button" type="button" onclick="downImg()">Save<br>Image</button>
-        <button class="button" type="button" onclick="copyData()">Copy Data</button>
+        <button class="button downImgButton" type="button" onclick="downImg()">Save<br>Image</button>
+        <button class="button inputDataButton" type="button">Input<br>Data</button>
+        <dialog>
+            <div class="modal_body">
+                <div class="input_body">
+                    <div>
+                        <label for="fes_data">fes_data:</label>
+                        <input type="text" id="fes_data" />
+                    </div>
+                    <div>
+                        <label for="party_data">party_data:</label>
+                        <input type="text" id="party_data" />
+                    </div>
+                    <div>
+                        <label for="normal_data">normal_data:</label>
+                        <input type="text" id="normal_data" />
+                    </div>
+                </div>
+                <button class="button applyDataButton" type="button" onclick="applyData()">Apply<br>Data</button>
+            </div>
+        </dialog>
+        <button class="button copyDataButton" type="button" onclick="copyData()">Copy<br>Data</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
