--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/favicon.ico" type="image/x-icon">
     <link rel="icon" href="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/favicon.ico" type="image/x-icon">
